sunuo (0.4.4) unstable; urgency=low

  * wake up TimerThread during shutdown
  * make Account.Limit configurable (patch by Maik Greubel)
  * run.sh: kill SunUO process on exit
  * enable the .NET server GC by default (hint from Kai Sassmannshausen)

 --

sunuo (0.4.3) unstable; urgency=low

  * make automatic world save interval configurable, patch by Maik Greubel
  * documentation updates
    - server-list configuration
  * manual locking
    - TimerChangeEntry.m_InstancePool
    - NetState.m_Disposed
  * fixed C# compiler warnings
    - use IPAddress.GetAddressBytes() instead of IPAddress.Address
    - use ScriptCompiler.Libraries instead of ScriptCompiler.Assemblies
    - don't set Listener.Port in Misc/ServerList.cs
    - ignore local port in Encryption

 -- Max Kellermann <max@duempel.org>  Tue,  9 Jan 2007 09:14:50 +0100

sunuo (0.4.2) unstable; urgency=low

  * added interface IPacket, implemented by class Packet
  * implemented abstract packet recycler code
    - recycle MobileMoving
  * continued memory optimizations
    - eliminated most DateTime.Now calls
    - all other DateTime.Now calls are converted to DateTime.UtcNow to avoid
      time zone lookups
    - reuse timer in spawner engine
    - early return when HarrowerTentacles have no drain targets
    - reuse TimerChangeEntry objects
    - NameList: trim strings in initialization, not on every request
  * manual synchronization of TimerThread.m_ChangeQueue
  * obsolete APIs
    - Core.ExePath
    - Core.BaseDirectory
    - ScriptCompiler.Assemblies
    - CrashedEventArgs.Close
  * moved filesystem paths from Core to Core.Config
    - LogDirectory
    - CacheDirectory
  * removed Core.LocalDirectoryInfo, Core.BaseDirectoryInfo
  * login: removed EventSink.Crashed

 -- Max Kellermann <max@duempel.org>  Fri,  5 Jan 2007 00:53:42 +0100

sunuo (0.4.1) unstable; urgency=low

  * lock m_Accounts in Accounting.Accounts
  * fixed account database corruption bug